# adofai-official-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
exported_levels/1-X/: conversion_report.md  main.adofai
exported_levels/2-X/: backup.adofai  conversion_report.md  main.adofai
exported_levels/3-X/: conversion_report.md  main.adofai
exported_levels/tutorials-1/1-1/: conversion_report.md  main.adofai
exported_levels/tutorials-1/1-2/: conversion_report.md  main.adofai
exported_levels/tutorials-1/1-3/: conversion_report.md  main.adofai
exported_levels/tutorials-1/1-4/: conversion_report.md  main.adofai
exported_levels/tutorials-1/1-5/: conversion_report.md  main.adofai
exported_levels/tutorials-1/1-6/: conversion_report.md  main.adofai
src/adofai_official_extractor/: __init__.py  adofai_writer.py  asset_index.py  converter.py  extract_1x.py  extract_2x.py  extract_3x.py  extract_level.py  profiles.py  report.py  unity_scene.py
tests/: test_extract_1x.py
